Finished workspaces impl